<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.auth.EnterCodeFragment">


    <ImageView
        android:id="@+id/ivRegister"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:src="@drawable/ic_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/vertical_large_margin"
        android:contentDescription="@string/cd_ivregister" />

    <TextView
        android:id="@+id/tvRegisterCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin"
        android:textStyle="bold"
        android:textSize="@dimen/normal_text"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/register_enter_code"
        app:layout_constraintTop_toBottomOf="@id/ivRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvRegisterSent"
        style="@style/smallText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/vertical_margin"
        android:gravity="center"
        android:text="@string/register_text_sent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRegisterCode" />

    <EditText
        android:id="@+id/editTextRegisterPhone"
        style="@style/editText"
        android:autofillHints=""
        android:hint="@string/register_hint_default_code"
        android:maxLength="6"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvRegisterSent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>